[Heros][JS] Added windows specific modifer via JS and CSS Vars to fix overflow on hero pseudo-elements caused by vw including scrollbar space on Windows browsers.

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -52,7 +52,7 @@
                     padding: 0 0 .8rem;
                     text-transform: uppercase;
                     letter-spacing: 0.125rem;
-                    overflow-x: scroll;
+                    overflow-x: auto;
                 }
             }
 
